# miras

./: .gitignore  README.md  VAST_INSTRUCTIONS.md  complete.py  dry_run.py  macbook_run.py  pyproject.toml  train.py
miras/: __init__.py  llama_macro.py  moneta.py
vast/: Dockerfile  build_image.sh  entrypoint.sh
