[project]
name = "miras"
version = "0.1.0"
description = "Experiments replicating results from the MIRAS paper."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy",
    "einops",            # Essential for MIRAS matrix operations
    "tqdm",
    "datasets",
    "transformers",
    "wandb",
]

# This is the "magic" section that allows GPU support in a .toml
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[tool.setuptools]
packages = ["miras"]

